# cDCL

./: .gitignore  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  README  README.md  configure  configure.in
.github/workflows/: c-cpp.yml
DCL/Communication_Layers/: TDCLBufferedPipe.cpp  TDCLBufferedPipe.h  TDCLCommLayer.cpp  TDCLCommLayer.h  TDCLHammerPipe.cpp  TDCLHammerPipe.h  TDCLMNPPipe.cpp  TDCLMNPPipe.h  TDCLPipe.cpp  TDCLPipe.h  TDCLPipeProxy.cpp  TDCLPipeProxy.h  TDCLSyncCommLayer.cpp  TDCLSyncCommLayer.h
DCL/Exceptions/: TDCLClassCastException.cpp  TDCLClassCastException.h  TDCLException.cpp  TDCLException.h  TDCLNSException.cpp  TDCLNSException.h  TDCLNewtonException.cpp  TDCLNewtonException.h  TDCLNotAvailableException.cpp  TDCLNotAvailableException.h  TDCLPackageException.cpp  TDCLPackageException.h  TDCLUserCancelledException.cpp  TDCLUserCancelledException.h
DCL/Headers/: DCLDebugMacOSPPCPrefix.h  DCLDebugMacOSPPCPrefix.pch++  DCLDebugOSXPrefix.h  DCLDebugOSXPrefix.pch++  DCLDefinitions.h  DCLErrorMessages.h  DCLFinalMacOSPPCPrefix.h  DCLFinalMacOSPPCPrefix.pch++  DCLFinalOSXPrefix.h  DCLFinalOSXPrefix.pch++  DCLMacErrorMessages.h  DCLStrings.h  PrecompiledHeader.h
DCL/Interfaces/: IDCLFiles.h  IDCLThreads.h  TDCLApplication.cpp  TDCLApplication.h  TDCLEvent.cpp  TDCLEvent.h  TDCLFSItem.cpp  TDCLFSItem.h  TDCLFSItemRef.cpp  TDCLFSItemRef.h  TDCLFile.cpp  TDCLFile.h  TDCLFolder.cpp  TDCLFolder.h  TDCLRootFolder.cpp  TDCLRootFolder.h  TDCLThread.cpp  TDCLThread.h  UDCLTime.cpp  UDCLTime.h
DCL/Link/: TDCLDockLink.cpp  TDCLDockLink.h  TDCLFullDockLink.cpp  TDCLFullDockLink.h  TDCLInspectorLink.cpp  TDCLInspectorLink.h  TDCLLink.cpp  TDCLLink.h  TDCLLoadPackageLink.cpp  TDCLLoadPackageLink.h
DCL/NS_Objects/: KDCLNSErrors.h
DCL/Package/: KDCLPackageErrors.h  TDCLPackage.cpp  TDCLPackage.h  TDCLPkgNOSPart.cpp  TDCLPkgNOSPart.h  TDCLPkgPart.cpp  TDCLPkgPart.h  TDCLPkgRelocatablePart.cpp  TDCLPkgRelocatablePart.h  UDCLPaperback.cpp  UDCLPaperback.h
DCL/Resources/: DCLMacErrorMessages.r  Error_Messages_Template
DCL/Server/: TDCLOneLinkServer.cpp  TDCLOneLinkServer.h  TDCLServer.cpp  TDCLServer.h  TDCLSimpleServer.cpp  TDCLSimpleServer.h
DCL/Streams/: TDCLMemStream.cpp  TDCLMemStream.h  TDCLRandomAccessStream.h  TDCLStdStream.cpp  TDCLStdStream.h  TDCLStream.cpp  TDCLStream.h
K/Crypto/: U3DES.cpp  U3DES.h  UDES.cpp  UDES.h  UDESTables.cpp
K/Defines/: KDefinitions.cpp  KDefinitions.h
K/Math/: TInt64.cpp  TInt64.h  TSInt64.h  TUInt64.cpp  TUInt64.h  UTInt64.cpp  UTInt64.h
K/Misc/: RelocHack.h  TMappedFile.cpp  TRefCounter.cpp  TRefCounter.h  TSmartPtr.h  UBase64.cpp  UBase64.h  UPStrings.cpp
K/Streams/: TFileStream.cpp
K/Tests/: KDebug.h
K/Threads/: TCondVar.cpp  TCondVar.h  TMutex.cpp  TMutex.h  TThread.cpp  TThread.h
K/Unicode/: TMutableStringRef.cpp  (+6 more)
Sample_Code/PackageUtils/: CMakeLists.txt  DumpPkgDir.cpp  DumpPkgPart.cpp  NESPackager.cpp  PBBookMaker.cpp  WatsonEnabler.cpp
Sample_Code/PackageUtils/NESPackager_Template/: nespkgtemplate  nespkgtemplate constants.f  nespkgtemplate output.f  nespkgtemplate.lyt  nespkgtemplate.nsof
Sample_Code/PackageUtils/PBBookMaker_Templates/Paperback/: paperbacktemplate-nos1-light.nsof  paperbacktemplate-nos1-light.pkg  paperbacktemplate-nos1.nsof  paperbacktemplate-nos1.pkg  paperbacktemplate-nos2-light.nsof  paperbacktemplate-nos2-light.pkg  paperbacktemplate-nos2.nsof  paperbacktemplate-nos2.pkg
Sample_Code/PackageUtils/PBBookMaker_Templates/Reader_2.0/: pbbooktemplate  pbbooktemplate constants.f  pbbooktemplate output.f  pbbooktemplate.lyt  pbbooktemplate.nsof
Sample_Code/PackageUtils/Tests/: DumpPkgDir-Keyboards.pkg.master  DumpPkgDir-NTHelp10.pkg.master  DumpPkgPart-Keyboards.pkg.master  DumpPkgPart-NTHelp10.pkg.master  test-DumpPkgDir.sh  test-DumpPkgPart.sh
Sample_Code/ToolchainUtils/: CMakeLists.txt  ELFtoNTK.cpp  ELFtoPKG.cpp  README.md  Rex.cpp  TELFFile.cpp  TELFFile.h
Sample_Code/ToolchainUtils/Tests/Rex/: EinsteinTabletDriver.pkg  test-diff-checksum0.src  test-diff-checksum0.src.master  test-diff-checksum1.src  test-diff-checksum1.src.master  test-diff-checksum2.src  test-diff-checksum2.src.master  test-diff-flashdriver.src  test-diff-flashdriver.src.master  test-diff-minimal.src  test-diff-minimal.src.master  test-diff-nospackage-rex.src  test-diff-nospackage-rex.src.master  test-diff-nospackage2-rex.src  test-diff-nospackage2-rex.src.master  test-diff-pkg-relocatable-code.src  test-diff-pkg-relocatable-code.src.master  test-diff.sh
Sample_Code/ToolchainUtils/examples/: Makefile  NTK Project.img  PDemo.cpp  PDemo.impl.h  PDemo.impl.s  PDemoInterface.h  PDemoInterfaceGlue.s  README.md  ntkmodule.cpp  ntkmodule.exp  ntkmodule.map
Sample_Code/ToolchainUtils/examples/NewtonRuntime/: NewtonExceptions.cpp  NewtonPublicAPIs.s
Tests/: CMakeLists.txt  tests.cpp  tests.h
Tests/ADSPTest/: ADSPReceive.cpp  ADSPSend.cpp  ADSPTest.mcp
Tests/Tests/: TTestApplication.cpp  TTestApplication.h  TTestDockLink.cpp  TTestDockLink.h  TTestEmptyFilesIntf.cpp  TTestEmptyFilesIntf.h  TTestServer.cpp  TTestServer.h  UTestCommLayers.cpp  UTestCommLayers.h  UTestNS.cpp  UTestNS.h  UTestNSOF.cpp  UTestNSOF.h  UTestPkg.cpp  UTestPkg.h  UTestThreads.cpp  UTestThreads.h  UTestTime.cpp  UTestTime.h  UTestXML.cpp  UTestXML.h
Tests/scripts/: Doxyfile  common.sh  master-test-cl-sast-bsd  master-test-cl-sast-xadsp  master-test-ns-arraysandframes  master-test-ns-catenatestrings  master-test-ns-framekeyssort  master-test-ns-references-debugstr  master-test-ns-references-kill  master-test-nsof-waltersmith  master-test-pkg-waltersmith  master-test-threads-posix  master-test-xml-classes  master-test-xml-waltersmith  test-cl-sast-bsd.sh  test-cl-sast-xadsp.sh  test-doxygen.sh  test-ns-arraysandframes.sh  test-ns-catenatestrings.sh  test-ns-framekeyssort.sh  test-ns-references.sh  test-nsof-waltersmith.sh  test-pkg-idempotent.sh  test-pkg-waltersmith.sh  test-threads-posix.sh  test-xml-classes.sh  test-xml-waltersmith.sh  testall.sh  testm-cl-cad-bsd.sh  testm-cl-cad-fdserial.sh  testm-cl-cad-xadsp.sh  tests.pl
(+268 files in other folders)
